# nasa-psyche-ar

./: index.html
assets/: index-CQbg0TFQ.js  index-CjezijwL.js
nasa-psyche-ar/: index.html  package-lock.json  package.json  vite.config.ts
nasa-psyche-ar/public/models/: AsteroidPsyche.glb  AsteroidPsyche_Collision.glb
nasa-psyche-ar/rust_engine/: Cargo.toml
nasa-psyche-ar/rust_engine/src/: lib.rs
nasa-psyche-ar/src/: App.tsx  ar-config.ts  index.css  vite-env.d.ts
nasa-psyche-ar/src/components/: ARScene.tsx
